read me and business understanding

--- a/CounterPoint.ipynb
+++ b/CounterPoint.ipynb
@@ -3,6 +3,20 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "News publications are becoming increasingly partisan.\n",
+    "Individuals are falling into “echo chambers” online.\n",
+    "Political discourse has become an (opinion poll) point scoring contest.\n",
+    "This results in political entrenchment whereby we no longer see much cross party support on most matters.\n",
+    "\n",
+    "I hope to build a programme that allows for users to read a broader range of view by recommending articles that oppose an inputted article by the user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "Collapsed": "true"
    },
    "source": [
