plots and conclusion

--- a/CounterPoint.ipynb
+++ b/CounterPoint.ipynb
@@ -332,7 +332,16 @@
     "              yaxis = dict(title = 'Count'))\n",
     "graph_r = go.Figure(data=[trace], layout=layout)\n",
     "plotly.offline.plot(graph_r, filename='topics.html', auto_open=False)\n",
-    "HTML('topics.html')"
+    "# HTML('topics.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "![title](newplot(5).png)"
    ]
   },
   {
@@ -2168,6 +2177,15 @@
    "source": [
     "prediction = svm.best_model.predict([x_lem_tfidf.iloc[13,:]])\n",
     "suggest(prediction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "This classifier is very good at predicting the political inclination of a text (left leaning, right leaning or neutral). Hence the model is able to predict the political inclination of a previously unseen text. This prediction can be used to recommend previously analysed atricles that oppose the unseen, user inputed article.\n"
    ]
   }
  ],
